authorization update api update sql query
