# gapi/rpc_create_user.go
@@ -7,9 +7,8 @@ import (
 	db "github.com/SunnyChugh99/banking_management_golang/db/sqlc"
 	"github.com/SunnyChugh99/banking_management_golang/pb"
 	"github.com/SunnyChugh99/banking_management_golang/util"
+	"github.com/SunnyChugh99/banking_management_golang/val"
 	"github.com/lib/pq"
-	"github.com/lib/val"
-
 	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -17,7 +16,11 @@ import (
 
 
 func (server *Server) CreateUser(ctx context.Context,req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
-
+	violations := validateCreateUserRequest(req)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+	
 	hashedPassword, err := util.HashPassword(req.GetPassword())
 	fmt.Println("here-3")
 
@@ -59,13 +62,22 @@ func (server *Server) CreateUser(ctx context.Context,req *pb.CreateUserRequest) 
 	return rsp, nil
 }
 
-func validateCreateUserRequest(req *pb.CreateUserRequest) (violations []*errdetails.BadRequest_FieldViolation){
-	if err:= val.ValidateUsername(req.GetUsername()); err!=nil{
-
-
+func validateCreateUserRequest(req *pb.CreateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := val.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolation("username", err))
 	}
 
+	if err := val.ValidatePassword(req.GetPassword()); err != nil {
+		violations = append(violations, fieldViolation("password", err))
+	}
 
+	if err := val.ValidateFullName(req.GetFullName()); err != nil {
+		violations = append(violations, fieldViolation("full_name", err))
+	}
 
+	if err := val.ValidateEmail(req.GetEmail()); err != nil {
+		violations = append(violations, fieldViolation("email", err))
+	}
 
+	return violations
 }
