# gapi/rpc_login_user.go
@@ -8,6 +8,8 @@ import (
 	db "github.com/SunnyChugh99/banking_management_golang/db/sqlc"
 	"github.com/SunnyChugh99/banking_management_golang/pb"
 	"github.com/SunnyChugh99/banking_management_golang/util"
+	"github.com/SunnyChugh99/banking_management_golang/val"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 	"google.golang.org/protobuf/types/known/timestamppb"
@@ -15,6 +17,10 @@ import (
 
 
 func (server *Server) LoginUser(ctx context.Context, req *pb.LoginUserRequest) (*pb.LoginUserResponse, error) {
+	violations := validateLoginUserRequest(req)
+	if violations!=nil{
+		return nil, invalidArgumentError(violations)
+	}
 	user, err := server.store.GetUser(ctx, req.GetUsername())
 	if err !=nil{
 		if err == sql.ErrNoRows{
@@ -80,4 +86,16 @@ func (server *Server) LoginUser(ctx context.Context, req *pb.LoginUserRequest) (
 	}
 
 	return rsp, nil
+}
+
+
+func validateLoginUserRequest(req *pb.LoginUserRequest) (violations []*errdetails.BadRequest_FieldViolation){
+	if err:= val.ValidateUsername(req.GetUsername()); err!=nil{
+		violations = append(violations, fieldViolation("username", err))
+	}
+
+	if err:= val.ValidatePassword(req.GetPassword()); err!=nil{
+		violations = append(violations, fieldViolation("password", err))
+	}
+	return violations
 }
